...

class MockService {
    public static let shared = MockService()
    
    func getAllRecipes() -> [RecipeCard] {
        return [
            RecipeCard(name: "Lasagna", category: "Plato", ingredients: [], imagen: "lasagna", country: "Italia", city: "Napoles"),
            RecipeCard(name: "Pizza Napolitana", category: "Aperitivo", ingredients: [], imagen: "pizza", country: "Italia", city: "Napoles"),
            RecipeCard(name: "Puré de papas", category: "", ingredients: [], imagen: "", country: "", city: ""),
            RecipeCard(name: "Sashimi", category: "", ingredients: [], imagen: "", country: "", city: ""),
            RecipeCard(name: "Tiramisú", category: "", ingredients: [], imagen: "", country: "", city: ""),
//            RecipeCard(name: "", category: "", ingredients: [], imagen: "", country: "", city: ""),
//            RecipeCard(name: "", category: "", ingredients: [], imagen: "", country: "", city: ""),
        ]
...
